<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/loginbg"
    tools:context="com.gzcc.CodingGarfield.shopping.MainActivity">

    <RadioGroup
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/radioGroup2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <RadioButton
            android:textColor="@color/TextColor"
            android:id="@+id/shop"
            android:layout_width="72dp"
            android:layout_height="@dimen/radiolength"
            android:text="@string/mainShop"
            android:checked="false"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:textColor="@color/TextColor"
            android:id="@+id/customer"
            android:layout_width="72dp"
            android:layout_height="@dimen/radiolength"
            android:text="@string/mainUser"
            android:checked="true"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:height="5dp"
        android:ems="10"
        android:id="@+id/username"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/secret"
        android:layout_alignStart="@+id/secret" />

    <TextView         android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/secret"
        android:layout_toLeftOf="@+id/secret"
        android:layout_toStartOf="@+id/secret" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/secret"
        android:password="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="136dp"
        android:layout_above="@+id/register"
        android:layout_alignRight="@+id/login"
        android:layout_alignEnd="@+id/login" />

    <TextView         android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/secret"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/secret"
        android:layout_alignBottom="@+id/secret"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:background="@color/ButtonColor"
        android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:id="@+id/register"
        android:onClick="register"
        android:layout_alignTop="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@color/ButtonColor"
        android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:onClick="login"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
