<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gzcc.CodingGarfield.shopping.UpdateBusinessActivity">

    <TextView android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lookShopIM"
        android:textSize="23sp"
        android:id="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <TextView android:textSize="13dp" android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lookShopName"
        android:id="@+id/textView15"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/textView14"
        android:layout_toLeftOf="@+id/busname"
        android:layout_toStartOf="@+id/busname" />

    <TextView android:textSize="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/busname"
        android:layout_alignTop="@+id/textView15"
        android:layout_centerHorizontal="true" />

    <TextView android:textSize="13dp" android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lookShopPW"
        android:id="@+id/textView16"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView15"
        android:layout_toLeftOf="@+id/buspassword"
        android:layout_toStartOf="@+id/buspassword" />

    <TextView android:textSize="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/buspassword"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignLeft="@+id/busnumber"
        android:layout_alignStart="@+id/busnumber" />

    <TextView android:textSize="13dp" android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lookShopPhone"
        android:id="@+id/textView17"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView16"
        android:layout_alignRight="@+id/textView16"
        android:layout_alignEnd="@+id/textView16" />

    <TextView android:textSize="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/busnumber"
        android:layout_alignTop="@+id/textView17"
        android:layout_centerHorizontal="true" />

    <TextView android:textSize="13dp" android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lookShopMail"
        android:id="@+id/textView18"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView17"
        android:layout_alignRight="@+id/textView17"
        android:layout_alignEnd="@+id/textView17" />

    <TextView android:textSize="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/busemail"
        android:layout_alignTop="@+id/textView18"
        android:layout_centerHorizontal="true" />

    <TextView android:textSize="13dp" android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lookShop"
        android:id="@+id/textView19"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView18"
        android:layout_alignRight="@+id/textView18"
        android:layout_alignEnd="@+id/textView18" />

    <TextView android:textSize="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/busshopname"
        android:layout_alignTop="@+id/textView19"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:textColor="@color/ThemeColor"
        android:background="@color/ButtonColor"
        android:id="@+id/busback"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alter"
        android:textColor="@color/ThemeColor"
        android:background="@color/ButtonColor"
        android:id="@+id/busupdate"
        android:layout_alignTop="@+id/busback"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
