<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/loginbg"
    tools:context="com.gzcc.CodingGarfield.shopping.Register2Activity">

    <Button
        android:background="@color/ButtonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/businessback"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="back"
        android:textColor="@color/ThemeColor" />

    <Button
        android:textColor="@color/ThemeColor"
        android:background="@color/ButtonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exit"
        android:id="@+id/businessexit"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="exit"/>

    <TextView         android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:textSize="20sp"
        android:id="@+id/textv"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/businessback"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <EditText android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/businessname"
        android:ems="10"
        android:layout_alignBaseline="@+id/textv"
        android:layout_alignBottom="@+id/textv"
        android:layout_toRightOf="@+id/textv"
        android:layout_toEndOf="@+id/textv"
        android:inputType="none" />

    <TextView         android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/secret"
        android:textSize="20sp"
        android:id="@+id/textView5"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textv"
        android:layout_toLeftOf="@+id/businessphone"
        android:layout_toStartOf="@+id/businessphone" />

    <EditText android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/businesspassword"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <TextView         android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Phone"
        android:textSize="20sp"
        android:id="@+id/textView6"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/businessphone"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView         android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Mail"
        android:textSize="20sp"
        android:id="@+id/textView7"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/businessemail"
        android:layout_toStartOf="@+id/businessemail" />

    <EditText android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/businessemail"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/businessphone"
        android:layout_alignStart="@+id/businessphone" />

    <TextView         android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Shop"
        android:textSize="20sp"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <EditText android:textColor="@color/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tradename"
        android:ems="10"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8"
        android:inputType="none" />

    <Button
        android:background="@color/ButtonColor"
        android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/businesssave"
        android:onClick="register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
