<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gzcc.CodingGarfield.shopping.AlterUserInformation">

    <TextView android:textColor="@color/ThemeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alterUserIM"
        android:textSize="23sp"
        android:id="@+id/textView20"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView android:textColor="@color/ThemeColor"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alterUserName"
        android:id="@+id/textView21"
        android:layout_above="@+id/alteruserpassword"
        android:layout_toLeftOf="@+id/alteruserpassword"
        android:layout_toStartOf="@+id/alteruserpassword"
        android:layout_marginBottom="30dp" />

    <TextView
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/alterusername"
        android:layout_alignTop="@+id/textView21"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <TextView android:textColor="@color/ThemeColor"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alterUserPW"
        android:id="@+id/textView22"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/alterusernumber"
        android:layout_toLeftOf="@+id/textView20"
        android:layout_toStartOf="@+id/textView20" />

    <EditText android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alteruserpassword"
        android:ems="10"
        android:layout_alignBaseline="@+id/textView22"
        android:layout_alignBottom="@+id/textView22"
        android:layout_toRightOf="@+id/textView22"
        android:layout_toEndOf="@+id/textView22" />

    <TextView android:textColor="@color/ThemeColor"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alterUserPhone"
        android:layout_marginBottom="30dp"
        android:id="@+id/textView23"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/alteruseremail"
        android:layout_toStartOf="@+id/alteruseremail" />

    <EditText android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/alterusernumber"
        android:layout_alignBaseline="@+id/textView23"
        android:layout_alignBottom="@+id/textView23"
        android:layout_alignLeft="@+id/alteruserpassword"
        android:layout_alignStart="@+id/alteruserpassword" />

    <TextView android:textColor="@color/ThemeColor"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alterUserMail"
        android:id="@+id/textView24"
        android:layout_below="@+id/textView23"
        android:layout_toLeftOf="@+id/alterusernumber"
        android:layout_toStartOf="@+id/alterusernumber"
        android:layout_marginTop="11dp" />

    <EditText android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/alteruseremail"
        android:layout_alignBaseline="@+id/textView24"
        android:layout_alignBottom="@+id/textView24"
        android:layout_toRightOf="@+id/textView24"
        android:layout_toEndOf="@+id/textView24" />

    <Button
        android:textColor="@color/ThemeColor"
        android:background="@color/ButtonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveAlter"
        android:id="@+id/alteruserinformation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:textColor="@color/ThemeColor"
        android:background="@color/ButtonColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/alteruserback"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
